[gd_scene load_steps=3 format=3 uid="uid://c0um04jxnr8q1"]

[ext_resource type="Script" path="res://assets/prefabs/sky/sky.gd" id="1_6l155"]
[ext_resource type="PackedScene" uid="uid://ccqelaenlcqn2" path="res://assets/prefabs/cloud/cloud.tscn" id="2_x0w8d"]

[node name="sky" type="Node2D" node_paths=PackedStringArray("northSpawn", "southSpawn", "eastSpawn", "westSpawn", "spawnTimer")]
script = ExtResource("1_6l155")
northSpawn = NodePath("NorthSpawn")
southSpawn = NodePath("SouthSpawn")
eastSpawn = NodePath("EastSpawn")
westSpawn = NodePath("WestSpawn")
spawnTimer = NodePath("SpawnTimer")
cloudPrefab = ExtResource("2_x0w8d")
spawnTimerRangeBegin = 0.02
spawnTimerRangeEnd = 3.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_left = -528.0
offset_top = -411.0
offset_right = 1835.0
offset_bottom = 1120.0
color = Color(0.529412, 0.807843, 0.921569, 1)

[node name="NorthSpawn" type="ColorRect" parent="."]
offset_left = -313.0
offset_top = -612.0
offset_right = -254.0
offset_bottom = -572.0
scale = Vector2(36.2592, 1)

[node name="WestSpawn" type="ColorRect" parent="."]
offset_left = -1060.0
offset_top = -612.0
offset_right = -1024.0
offset_bottom = -580.0
scale = Vector2(2.30388, 59.9772)

[node name="EastSpawn" type="ColorRect" parent="."]
offset_left = 2131.0
offset_top = -572.0
offset_right = 2158.0
offset_bottom = -540.0
scale = Vector2(2.30388, 59.9772)

[node name="SouthSpawn" type="ColorRect" parent="."]
offset_left = -313.0
offset_top = 1283.0
offset_right = -254.0
offset_bottom = 1307.0
scale = Vector2(36.2592, 1)

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ChangeCloudDirectionTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ChangeCloudDirectionTimer" to="." method="_on_change_cloud_direction_timer_timeout"]
